[gd_scene load_steps=4 format=3 uid="uid://bqxat1aragxsb"]

[ext_resource type="Script" path="res://dungeon_transition_scene/dungeon_transition_scene.gd" id="1_4bn8t"]
[ext_resource type="PackedScene" uid="uid://buuak5l6bak3f" path="res://dropped_item_display/dropped_item_display.tscn" id="1_bq5jo"]
[ext_resource type="PackedScene" uid="uid://73mvo4p2s0t5" path="res://counter/input_hint.tscn" id="2_yrr4f"]

[node name="DungeonTransitionScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4bn8t")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 19.0
offset_right = 68.0
offset_bottom = 29.0
grow_horizontal = 2
text = "Items dropped by visitors"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -28.0
offset_right = -22.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
text = "Continue"

[node name="DroppedItemDisplay" parent="." instance=ExtResource("1_bq5jo")]
position = Vector2(128, 156)

[node name="InputHint" parent="." instance=ExtResource("2_yrr4f")]
position = Vector2(242, 232)
